--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
     <groupId>io.github.giggals-s-people</groupId>
     <artifactId>maven_sample_for_repository</artifactId>
-    <version>1.0.1.1</version>
+    <version>1.0.2</version>
+    <packaging>jar</packaging>
 
     <name>any sample lib</name>
     <description> just for test uploading maven central</description>
     <url>https://github.com/giggals-s-people/test-repo-opensource</url>
-
-    <developers>
-        <developer>
-            <name>dankim</name>
-            <email>dankim0124@gmail.com</email>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git:git://github.com/giggals-s-people/test-repo-opensource.git</connection>
-        <developerConnection>scm:git:ssh://github.com/giggals-s-people/test-repo-opensource.git</developerConnection>
-        <url>http://github.com/giggals-s-people/test-repo-opensource</url>
-    </scm>
 
 
     <properties>
@@ -33,16 +22,7 @@
     </properties>
 
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <build>
-
-
         <plugins>
 
             <plugin>
@@ -124,6 +104,28 @@
             <url>http://www.opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
+
+    <developers>
+        <developer>
+            <name>dankim</name>
+            <email>dankim0124@gmail.com</email>
+            <organization>Giggal_people</organization>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/giggals-s-people/test-repo-opensource.git</connection>
+        <developerConnection>scm:git:ssh://github.com/giggals-s-people/test-repo-opensource.git</developerConnection>
+        <url>http://github.com/giggals-s-people/test-repo-opensource</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 
 
 </project>
