--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <project.java.version>11</project.java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <sonar.projectKey>giggals-s-people_test-repo-opensource</sonar.projectKey>
     </properties>
 
 
